# openwater

./: .gitignore  Cargo.toml  Makefile  README.md
adr/: 0002-implement-plotting-for-dives.md  0003-library-to-process-logs-with-uddf-standard.md
docs/architecture/decisions/: 0001-first-version-of-CLI.md
examples/: dev.rs
examples/uddf/: log.uddf
src/: Leonardo_Demo.txt  actions.rs  args.rs  lib.rs  main.rs  vendors.rs
src/cli/: actions.rs  args.rs  main.rs
src/gui/: Package.swift  openwater.pc
src/gui/Sources/OpenWaterBridge/: OpenWater.swift
src/gui/Sources/OpenWaterCore/: module.modulemap  openwater.h
src/gui/Sources/OpenWaterGUI/: main.swift
src/lib/: errors.rs  ffi.rs  lib.rs  models.rs  parser.rs
src/sample_vendors/: CressiLeonardo.txt  to_csv.csv
tests/: integration_test.rs
tests/fixtures/: mocked_log.txt
