[package]
name = "openwater"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rprompt = "1.0.5"
colored = "2"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0"
csv = "1.3.0"
plotly = "0.6.0"
axum = {version = "0.6.20", features = ["headers"]}
tokio = { version = "1.0", features = ["full"] }
quick-xml = { version = "0.31", features = ["serialize"] }
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"

[[example]]
name = "dev"
path = "examples/dev.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[[bin]]
name = "api"
path = "src/api/main.rs"

[lib]
name = "openwater"
path = "src/lib/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]
